tests/cases/should_fail/multi_error_char/case.stderr
error: invalid character literal `ab`, character literals may only contain one codepoint
 --> $DIR/case.hash:3:10
2 |   main := () => {
3 |       a := 'ab';
  |            ^^^^ here
4 |   

error: invalid character literal `ddddd`, character literals may only contain one codepoint
 --> $DIR/case.hash:5:10
4 |   
5 |       c := 'ddddd';
  |            ^^^^^^^ here
6 |   };
